--- a/docs/_layouts/project.html
+++ b/docs/_layouts/project.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <!-- Page content -->
+     prj - template
     {{ content }}
 
     <!-- Optional additional JS (if needed) -->
