--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <!-- Page content -->
+    this is _layouts/default.hmtl
     {{ content }}
 
     <!-- Optional additional JS (if needed) -->
