--- a/docs/_layouts/project.html
+++ b/docs/_layouts/project.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Page content -->
-     prj - template-eo
+    this is _layouts/preoject.hmtl
     {{ content }}
 
     <!-- Optional additional JS (if needed) -->
