--- a/docs/_layouts/tool.html
+++ b/docs/_layouts/tool.html
@@ -9,6 +9,6 @@ layout: base
 <!-- define var -->
 {% assign lLIST_TOPIC  = site.projects %}
 {% for lTOPIC in lLIST_TOPIC %}
-<li>yo - {{ lTOPIC.path }}</li>
+<li>yo - {{ lTOPIC.url }}</li>
 {% endfor %}
 
