--- a/docs/_includes/debug.page.html
+++ b/docs/_includes/debug.page.html
@@ -1,5 +1,5 @@
 
-<h1> Debug Debug Debug </h1>
+<h1> Debug : Page : Info </h1>
 
 {% assign lDOMAIN       = site.mx.domain %}
 {% assign lCATEGORY     = page.collection %}
