--- a/docs/_includes/list.category.html
+++ b/docs/_includes/list.category.html
@@ -1,10 +1,10 @@
 
 <!-- declare variables -->
-{% assign lLIST_CATEGORY = "" | split: ','%}
+{% assign gvLIST_CATEGORY = "" | split: ','%}
 
 <!-- define array of categories -->
 {% for lCATEGORY in site.collections %}
   {% unless lCATEGORY.label == "posts" %}
-  {% assign lLIST_CATEGORY = lLIST_CATEGORY | push: lCATEGORY.label %}
+  {% assign gvLIST_CATEGORY = gvLIST_CATEGORY | push: lCATEGORY.label %}
   {% endunless %}
 {% endfor %}
