--- a/docs/_includes/list.section.html
+++ b/docs/_includes/list.section.html
@@ -1,6 +1,6 @@
 
 <!-- declare variables -->
-{% assign lLIST_SECTION = "" | split: ','%}
+{% assign gvLIST_SECTION = "" | split: ','%}
 
 
 <!-- define array of sections for a category -->
@@ -9,6 +9,3 @@
 {% assign lLIST_CATEGORY = lLIST_CATEGORY | push: lCATEGORY.label %}
 {% endunless %}
 {% endfor %}
-
-<!-- define array of classifiers for a topic -->
-<!-- define array of stopic for a topic      -->
