--- a/docs/_includes/get.topic.info.html
+++ b/docs/_includes/get.topic.info.html
@@ -1,5 +1,7 @@
 
 <!-- declare variables -->
-{% assign gvTOPIC_CATEGORY = page.collection %}
 {% assign gvTOPIC_PATH     = page.path %}
-{% assign gvTOPIC_NAME     = page.path | split: '/' | slice: 2, 1 | first | downcase | strip %}
+{% assign gvTOPIC_CATEGORY = page.collection %}
+{% assign gvTOPIC_SECTION  = page.path | split: '/' | slice: 1 | first | downcase | strip %}
+{% assign gvTOPIC_NAME     = page.path | split: '/' | slice: 2 | first | downcase | strip %}
+
