--- a/docs/_includes/get.topic.info.html
+++ b/docs/_includes/get.topic.info.html
@@ -1,5 +1,5 @@
 
-<!-- declare variables -->
+<!-- declare and define variables -->
 {% assign gvTOPIC_PATH     = page.path %}
 {% assign gvTOPIC_CATEGORY = page.collection %}
 {% assign gvTOPIC_SECTION  = page.path | split: '/' | slice: 1 | first | downcase | strip %}
