--- a/docs/_includes/lib.get.list.topic.object.html
+++ b/docs/_includes/lib.get.list.topic.object.html
@@ -1,6 +1,6 @@
 
 <!-- declare and define variables -->
-{%- include get.topic.info -%} 
+{%- include get.topic.info.html -%} 
 <!-- declare variables -->
 {% assign gvLIST_TOPIC = "" | split: ','%}
 
