--- a/docs/_includes/todo.list.reference.html
+++ b/docs/_includes/todo.list.reference.html
@@ -5,11 +5,24 @@
 {% assign lTOPIC_NAME     = lFILE_PATH | split: '/' | slice: 2 | first | downcase | strip %}
 
 
-<h1><span translation='no'>{{ lTOPIC_NAME }}</a> referenc</h1>
+<h1><span translation='no'>{{ lTOPIC_NAME }}</span> reference</h1>
+<h2>File property</h2>
+<ul>
+ <li>lFILE_PATH      = {{lFILE_PATH}}</li>
+ <li>lTOPIC_CATEGORY = {{lTOPIC_CATEGORY}}</li>
+ <li>lTOPIC_NAME     = {{lTOPIC_NAME}}</li>
+</ul>
 
+<h2>reference property</h2>
 {% for item in page.mx.ref %}
-  {% assign key = item | keys | first | strip %}
-  <li>1 - {{ item }}</li>
-  <li>2 - {{ key }} </li>
-  <li>3 - {{ key | split: ','}}</li>
+<ul>
+{% assign lREF_TOPIC_CLASSIFIER  = item | split: '/' | slice: 0 | first%}
+{% assign lREF_TOPIC_NAME        = item | split: '/' | slice: 1 | first%}
+  <li> lREF_TOPIC_CLASSIFIER = {{ lREF_TOPIC_CLASSIFIER }}</li>
+  <li> lREF_TOPIC_NAME = {{ lREF_TOPIC_NAME }}</li>
 {% endfor %}
+</ul>
+
+<h2>finding reference</h2>
+find all files wich contains  <b>{{lREF_TOPIC_CLASSIFIER}}/{{lREF_TOPIC_NAME}}</b> in all <b>categories</b>
+
