--- a/docs/_includes/debug.html
+++ b/docs/_includes/debug.html
@@ -1,3 +1,7 @@
+<span style="color: red; font-size: 42px;">DEBUG DEBUG DEBUG</span>
+<h1>entrypoint</h1>
+<li>include filename: <b>debug.html</b></li>
+
 <!-- v01 -->
 <!-- declare and define var -->
 {% assign lFILE_PATH      = page.path %}
@@ -5,81 +9,22 @@
 {% assign lTOPIC_NAME     = lFILE_PATH | split: '/' | slice: 2 | first | downcase | strip %}
 
 
-<h1>DEBUG DEBUG DEBUG </h1>
-<h2>manage collections</h2>
-
-<p>
-<li>a <b>topix:category</b> is a <b>jekyll:collections</b></li>
-</p>
-
-<h3>List of all categories</h3>
+<h2>This file property</h2>
 <ul>
-  {% for collection in site.collections %}
-  <li>{{collection.label}}</li>
-  {% endfor %}
-</ul>
-
-<h3>List all categories unless sdef collection posts</h3>
-<h4>method</h4>
-<ul>
-  {% for lCATEGORY in site.collections %}{% unless  lCATEGORY.label == 'posts' %}
-    <li>{{ lCATEGORY.label }}</li>
-  {% endunless %}{% endfor %}
-</ul>
-
-<h4>method</h4>
-{% assign lLIST_CATEGORY = site.collections | where_exp: 'collection', 'collection.label != "posts"' %}
-<ul>
-  {% for lCATEGORY in lLIST_CATEGORY %}
-    <li>{{ lCATEGORY.label }}</li>
-  {% endfor %}
-</ul>
-
-<h3>object of each category</h3>
-<h4>for collection:posts</h4>
-{% assign lLIST_CATEGORY = site.collections | where_exp: 'collection', 'collection.label == "posts"' %}
-<ul>
-{% for lCATEGORY in lLIST_CATEGORY %}
-  {% for property in lCATEGORY %}
-    <li>{{ property }}</li>
-  {% endfor %}
-{% endfor %}
-</ul>
-<b>permalink</b> exists only in the <b>jekyll:collection:posts</b>
-
-<h4>for category udef</h4>
-{% assign lLIST_CATEGORY = site.collections | where_exp: 'collection', 'collection.label == "projects"' %}
-<ul>
-{% for lCATEGORY in lLIST_CATEGORY %}
-  {% for property in lCATEGORY %}
-    <li>{{ property }}</li>
-  {% endfor %}
-{% endfor %}
+ <li>lFILE_PATH      = {{lFILE_PATH}}</li>
+ <li>lTOPIC_CATEGORY = {{lTOPIC_CATEGORY}}</li>
+ <li>lTOPIC_NAME     = {{lTOPIC_NAME}}</li>
 </ul>
 
 
-<h3>property of each category.object except docs</h3>
-{% assign lLIST_CATEGORY = site.collections | where_exp: 'collection', 'collection.label != "posts"' %}
-{% for lCATEGORY in lLIST_CATEGORY %}
-lCATEGORY.label  = {{ lCATEGORY.label }}
-<ul>
-  <li>lCATEGORY.label              = {{ lCATEGORY.label }}</li>
-  <li>lCATEGORY.output             = {{ lCATEGORY.output }}</li>
-  <li>lCATEGORY.directory          = {{ lCATEGORY.directory }}</li>
-  <li>lCATEGORY.relative_directory = {{ lCATEGORY.relative_directory }}</li>
-  <li>lCATEGORY.files = {{ lCATEGORY.files }}</li>
-</ul>
-{% endfor %}
 
-<h3>docs property for each category</h3>
-<b>list all files of all udef categories</b>
-{% assign lLIST_CATEGORY = site.collections | where_exp: 'collection', 'collection.label != "posts"' %}
-{% for lCATEGORY in lLIST_CATEGORY %}
-{{ lCATEGORY.label }} : 
-<ul>
-  {% for doc in lCATEGORY.docs %}
-    <li>{{ doc.collection }} - {{ doc.path }} - {{ doc.url }}</li>
-  {% endfor %}
-</ul>
-{% endfor %}
+
+{%- include debug.reference.html -%}
+
+{%- comment -%} {%- include debug.collection.string.html -%} {%- endcomment -%}
+
+{%- comment -%} {%- include debug.collection.col.html -%} {%- endcomment -%}
+
+
+
 
